microservices/k8s/manifests/jaegeragent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger-agent
  name: jaeger-agent
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-agent
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jaeger-agent
    spec:
      containers:
      - args:
        - --collector.host-port=jaeger-collector.istio-system.svc.cluster.local:14267
        image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 6831
          name: jaeger-agent
      restartPolicy: Always
