microservices/k8s/manifests/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: default
spec:
  ports:
  - name: client
    port: 8080
    targetPort: 8080
  selector:
    app: client
