microservices/k8s/manifests/publisher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: publisher
  name: publisher
  namespace: default
spec:
  ports:
  - name: publisher
    port: 8080
    targetPort: 8080
  selector:
    app: publisher
